<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/select"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/choose_character_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="#A9000000"
        android:text="@string/choose_character"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#A9000000"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Personnage 1 -->
        <LinearLayout
            android:id="@+id/character1_layout"
            android:layout_width="0dp"
            android:layout_height="205dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/character1_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Nom"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/character1_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:maxWidth="110dp"
                android:maxHeight="110dp"
                android:src="@drawable/archer" />

            <TextView
                android:id="@+id/character1_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/health_character"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/character1_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/damage_character"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Personnage 2 -->
        <LinearLayout
            android:id="@+id/character2_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/character2_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Nom"
                android:textColor="@color/white"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/character2_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:maxWidth="110dp"
                android:maxHeight="110dp"
                android:src="@drawable/warrior" />

            <TextView
                android:id="@+id/character2_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/health_character"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/character2_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/damage_character"
                android:textColor="@color/white" />
        </LinearLayout>

        <!-- Personnage 3 -->
        <LinearLayout
            android:id="@+id/character3_layout"
            android:layout_width="0dp"
            android:layout_height="205dp"
            android:layout_weight="1"
            android:background="?attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/character3_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Nom"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/character3_image"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:maxWidth="110dp"
                android:maxHeight="110dp"
                android:src="@drawable/mage" />

            <TextView
                android:id="@+id/character3_pv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/health_character"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/character3_damage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/damage_character"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/confirm_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="#1EB53E"
        android:text="@string/confirm_selection" />
</LinearLayout>
